@@ -1,3 +1,8 @@
+2006-04-26 Silke Reimer <Silke.Reimer@intevation.de>
+
+	* tools/geos-config.in: fixed library path
+	to use layout detected by autoconf
+
 2006-04-21 Sandro Santilli <strk@refractions.net>
 
 	* source/geom/PrecisionModel.cpp: fixed
